--- a/DjangoTest/django_test_app/templates/post.html
+++ b/DjangoTest/django_test_app/templates/post.html
@@ -14,6 +14,6 @@
     {% endfor %}
     </div>
       <input type="text" id="text" placeholder="Comment">
-      <input type="submit" id="btn" value="Enter" data-url="/post/{{ post.id }}">
+      <input type="submit" id="btn" value="Enter" data-url="/post/{{ post.id }}/comment_create">
 </body>
 </html>
