--- a/DjangoTest/django_test_app/templates/postcreate.html
+++ b/DjangoTest/django_test_app/templates/postcreate.html
@@ -8,6 +8,7 @@
    {% csrf_token %}
    <form method="post">
             {% csrf_token %}
+            <h1>Create a post</h1>
             {{ form }}
             <button type="submit">Save</button>
         </form>
